<resources>
    <string name="app_name">MyCareNG</string>
    <string name="code">Enter Passkey</string>
    <string name="login">Login</string>
    <string name="unlock">Unlock</string>
    <string name="error_dialog">Error</string>
    <string name="info_dialog">Information</string>
    <string name="invalid_code">Invalid Verification Code</string>
    <string name="signUp">Sign Up</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="dob">Date of Birth</string>
    <string name="sex">Sex</string>

    <string name="state_of_residence">State of Residence</string>
    <string name="city">City</string>

    <string name="email">Email Address</string>
    <string name="phone">Phone No.</string>

    <string name="register">Sign Up</string>
    <string name="username">Email</string>
    <string name="s_password">Password</string>
    <string name="password">Enter Password</string>
    <string name="passkey">Enter Passkey</string>
    <string name="hospital_number">Enter Hospital Number</string>
    <string name="update">Update Profile</string>

    <string name="profile_created">Profile Successfuly Created</string>
    <string name="profile_error">Unable to create profile</string>

    <string name="fill_in_data">Fill in valid data to continue</string>
    <string name="pis">Patient Interactive System</string>

    <string name="reg_msg">Don\'t have an account ?</string>
    <string name="invalid_details">Invalid login details</string>
    <string name="close">Close</string>

    <string name="personal">Personal Details</string>
    <string name="contact">Contact Details</string>
    <string name="security">Security Details</string>

    <string name="appointment">Appointments</string>
    <string name="hospitals">Hospitals</string>
    <string name="medical_records">Medical Records</string>
    <string name="lab_records">Laboratory Records</string>
    <string name="education">Education</string>
    <string name="profile">Profile</string>
    <string name="faq">Questions</string>


    <string name="appointment_desc">Schedule Appointments</string>
    <string name="hospital_desc">Partner Hospitals Information</string>
    <string name="medical_records_desc">Most Recent Medical History</string>
    <string name="lab_records_desc">Past Laboratory Records</string>
    <string name="education_desc">Books/Guidelines/Tips</string>

    <string name="setting">Settings</string>
    <string name="setting_desc">Edit Profile, Create Passkey, Secure Usage!</string>


    <string name="search_hospital">Search Hospitals</string>
    <string name="server_error">Error connecting to server</string>

    <string name="book_appointment">New Appointment</string>
    <string name="search_appointment">Filter Appointment</string>

    <string name="appointment_history">Appointments History</string>

    <string name="no_appointment">NO APPOINTMENTS FOUND </string>

    <string name="hospital_error">Error loading hospitals..</string>

    <string name="hospital_error_detail">Error loading hospital details..</string>

    <string name="appointment_error">Error loading appointments..</string>

    <string name="error_saving_appointment">Error scheduling appointment</string>
    <string name="appointment_saved">Appointment Scheduled</string>

    <!--Book appointments-->

    <string name="select_hospital">Select Hospital</string>
    <string name="location">Select Branch</string>
    <string name="department">Select Speciality</string>
    <string name="date">Appointment Date</string>
    <string name="time">Appointment Time</string>
    <string name="tap">Tap to Select</string>
    <string name="doctor">Select Doctor</string>
    <string name="saveAppointment">Submit</string>


    <!--Foldable pane sample strings..-->

    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price_mock" translatable="false">$25</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">REQUESTS</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">WEIGHT</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">PLEDGE</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
