<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewAppointment">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <LinearLayout
            android:id="@+id/up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_hospital"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:drawableStart="@drawable/baseline_local_hospital_black_24"/>

        <Spinner
            android:id="@+id/hospital_name"
            android:background="@drawable/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/hospital_location"
            android:background="@drawable/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/department"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/hospital_department"
            android:background="@drawable/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/date"
            android:background="@drawable/edit_text"
            android:drawableTint="@color/black_overlay"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:editable="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="date"
            android:onClick="loadDate"
            android:longClickable="false"
            android:selectAllOnFocus="false"
            android:hint="@string/tap"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/time"
            android:background="@drawable/edit_text"
            android:drawableTint="@color/black_overlay"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:editable="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="time"
            android:longClickable="false"
            android:selectAllOnFocus="false"
            android:hint="@string/tap"
            android:onClick="loadTime"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/doctor"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/doctor"
            android:background="@drawable/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"/>

            <Button
                android:layout_marginTop="30dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saveAppointment"
                android:textColor="@color/buttonTextColor"
                android:background="@drawable/button_shape_blue"
                android:onClick="saveAppointment"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>


    </RelativeLayout>

    </ScrollView>

</LinearLayout>