<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.github.florent37.arclayout.ArcLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:arc_cropDirection="cropOutside"
            app:arc_position="bottom"
            app:arc_height="100dp"
            android:elevation="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient">

                <ImageView
                    android:id="@+id/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:srcCompat="@drawable/sign_here"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/mavenpro_regular"/>


            </LinearLayout>

        </com.github.florent37.arclayout.ArcLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            >


            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/baseline_email_black_24"
                android:drawableTint="@color/black_overlay"
                android:textColor="@color/black"
                android:textColorHint="@color/black_overlay"
                android:layout_gravity="center"
                android:hint="@string/username"
                android:background="@drawable/edit_text"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/password"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:inputType="textPassword"
                android:drawableTint="@color/black_overlay"
                android:textColor="@color/black"
                android:textColorHint="@color/black_overlay"
                android:drawableStart="@drawable/baseline_lock_black_24"
                android:layout_gravity="center"
                android:hint="@string/s_password"
                android:background="@drawable/edit_text"/>

            <Button
                android:layout_marginTop="30dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/buttonTextColor"
                android:background="@drawable/button_shape_blue"
                android:onClick="login"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"


                >

                <TextView
                    android:id="@+id/tview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_overlay"
                    android:text="@string/reg_msg"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    android:textSize="14sp" />

                <Button
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="70dp"
                    android:layout_marginRight="70dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="@color/buttonTextColor"
                    android:layout_below="@+id/tview"
                    android:background="@drawable/button_shape_blue"
                    android:onClick="register"
                    />


            </RelativeLayout>

        </LinearLayout>



    </LinearLayout>

</ScrollView>